--- a/Love/css/default_dev.css
+++ b/Love/css/default_dev.css
@@ -9,6 +9,7 @@ body {
 #mainDiv{
 	width: 100%;
 	height: 100%;
+	padding-bottom: 60px;
 }
 
 #loveHeart {
@@ -67,10 +68,10 @@ body {
 #code {
 	float: left;
 	width: 440px;
-	height: 400px;
+	height: 350px;
 	color: #333;
 	font-family: "Consolas", "Monaco", "Bitstream Vera Sans Mono", "Courier New", "sans-serif";
-	font-size: 12px;
+	font-size: 10px;
 }
 
 #code .string{
@@ -99,6 +100,10 @@ body {
 	text-align: center;
 	width:100%;
 	color:#666;
+	position: absolute;  
+	bottom: 0;
+	left:0;
+	height: 60px; 
 }
 
 #errorMsg{
